-> created a cards in home page -> created a profilepage/id and get a get data from json file -> created a complete ui

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,4 +6,6 @@
 $text-font: "Poppins", sans-serif !default;
 
 $blackColor: #101010 !default;
+$blueColor: #268dec !default;
+
 $shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
