--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,45 +1,64 @@
 @mixin justify-center {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-@mixin  justify-between {
-    display: flex;
-    justify-content: space-between;
+@mixin justify-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+@mixin items-center {
+  display: flex;
+  align-items: center;
+}
+
+@mixin flex-col {
+  display: flex;
+  flex-direction: column;
 }
 
 @mixin flex-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 @mixin container-width {
-    width: 80%;
+  width: 90%;
 }
 
 @mixin welcome-text {
-    font-family: $text-font;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    text-align: center;
+  font-family: $text-font;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  text-align: center;
 }
 
-@mixin  company-name {
-    font-family: $text-font;
-    line-height: 20px;
-    font-weight: 600;
-    font-size: 18px;
+@mixin company-name {
+  font-family: $text-font;
+  color: $blueColor;
+  line-height: 20px;
+  font-weight: 600;
+  font-size: 20px;
 }
 
 @mixin cards {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    max-width: 500px;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 500px;
 }
 
 @mixin logo-image {
-    width: 30%;
+  width: 30%;
+}
+
+@mixin progress-text {
+  font-family: $text-font;
+  color: $blackColor;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
 }
