--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,12 +1,14 @@
 .home-container {
   @include justify-center;
   height: 100vh;
+  width: 100%;
 
   .home-content {
     @include container-width;
 
     h4 {
       @include welcome-text;
+      padding: 20px 0px;
     }
 
     .cards-container {
@@ -38,18 +40,31 @@
 
           .image {
             @include justify-center;
+            margin-bottom: 10px;
 
             .company-logo {
               @include logo-image;
             }
           }
 
-          .company-data {
-            padding-top: 10px;
-            display: flex;
-            flex-direction: column;
-            font-size: 14px;
-            color: #92929e;
+          .progress-text {
+            color: $blueColor;
+            @include progress-text;
+            margin-top: 10px;
+          }
+
+          .card-bottom {
+            @include justify-between;
+            @include flex-wrap;
+
+            .company-data {
+              font-family: $text-font;
+              padding-top: 10px;
+              padding-right: 10px;
+              @include flex-col;
+              font-size: 12px;
+              color: #92929e;
+            }
           }
         }
       }
